<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tank Admin</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="newTank">Neue Daten anlegen</string>
    <string name="title_activity_new_data">Erstelle einen neuen Eintrag</string>
    <string name="date">Datum</string>
    <string name="tankstelle">Tankstelle</string>
    <string name="liter">Liter</string>
    <string name="text_gesamtbetrag">Gesamtbetrag</string>
    <string name="kilometerstand">Gesamtkilometer</string>
    <string name="datum">Datum</string>
    <string name="erstellen">Datensatz erstellen</string>
    <string name="overview">Überblick</string>
    <string name="title_activity_ueberblick">Überblick und Summen</string>
    <string name="title_tankdaten">Tankdaten</string>
    <string name="title_durchschnitt_summen">Durchschnitt und Summen</string>
    <string name="title_activity_display_settings">Einstellungen</string>
    <string name="zuruecksetzen">Alles zurücksetzen</string>
    <string name="zuruecksetzen_text">Wollen Sie wirklich alles zurücksetzen? Alle Daten werden dann gelöscht.</string>
    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Abbrechen</string>
    <string name="toast_geloescht">Die Datenbank wurde gelöscht.</string>
    <string name="sd_durchschnitt">Durchschnitt</string>
    <string name="sd_summe">Summe</string>
    <string name="sd_vergangeneTage_text">Vergangene Tage</string>
    <string name="sd_literpreis_text">Preis pro Liter</string>
    <string name="sd_kostenKilometer_text">Kosten pro Kilometer</string>
    <string name="sd_kilometer_text">gefahrene Kilometer</string>
    <string name="sd_gesamtkosten_text">Gesamtkosten</string>
    <string name="sd_gesamtliter_text">Gesamtliter</string>
    <string name="loeschen_text">Möchten Sie diesen Eintrag wirklich löschen?</string>
    <string name="dialogtoast_geloescht">Eintrag gelöscht.</string>
    <string name="title_activity_edit_data">Datensatz bearbeiten</string>
    <string name="speichern">Änderungen speichern</string>

</resources>
