<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent" >

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.goodyear.tankenapp.EditDataActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tankstelle"
        android:id="@+id/text_tankstelle"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:labelFor="@+id/tankstelle"/>


    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_tankstelle"
        android:layout_below="@+id/text_tankstelle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/liter"
        android:id="@+id/text_liter"
        android:layout_below="@+id/edit_tankstelle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/ppl"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_liter"
        android:layout_below="@+id/text_liter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/text_gesamtbetrag"
        android:id="@+id/text_gesamtbetrag"
        android:layout_below="@+id/edit_liter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/gesamtbetrag" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_gesamtbetrag"
        android:layout_below="@+id/text_gesamtbetrag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/kilometerstand"
        android:id="@+id/text_kilometerstand"
        android:layout_below="@+id/edit_gesamtbetrag"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/kilometer"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/edit_kilometer"
        android:layout_below="@+id/text_kilometerstand"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/datum"
        android:id="@+id/text_datum"
        android:layout_marginTop="32dp"
        android:labelFor="@+id/kilometer"
        android:layout_below="@+id/edit_kilometer"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <DatePicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_datePicker"
        android:layout_below="@+id/text_datum"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:calendarViewShown="false" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speichern"
        android:id="@+id/button_saveData"
        android:layout_below="@+id/edit_datePicker"
        android:layout_marginTop="32dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="aenderungenSpeichern"
        android:layout_alignRight="@+id/edit_kilometer"
        android:layout_alignEnd="@+id/edit_kilometer" />


</RelativeLayout>

</ScrollView>
